<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a18franciscorm.febrero_franciscoromaymendez.MainActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/fondo">

    <TextView
        android:id="@+id/textoPresentacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_Alumnos"
        android:textSize="@dimen/letra_Grande"
        android:textStyle="bold"/>
    <LinearLayout
        android:id="@+id/layoutDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textoPresentacion"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/textoCursos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mensaje_Curso"
            />
        <Spinner
            android:id="@+id/entradaCurso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            ></Spinner>
        <TextView
            android:id="@+id/textoCiclos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mensaje_Ciclo" />
        <Spinner
            android:id="@+id/entradaCiclo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            ></Spinner>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutDatos"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mensaje_Alumnos2"
            android:textAllCaps="false"
            />
        <EditText
            android:id="@+id/entradaNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:inputType="textCapWords"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutNome"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/gardado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mensaje_Guardar"
            />
        <Button
            android:id="@+id/listado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mensaxe_Listar"
            android:enabled="false" />

    </LinearLayout>
    <ListView
        android:id="@+id/listaItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></ListView>
</LinearLayout>
